apps/staging/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
spec:
  tls:
    - hosts:
        - mealie.heroaero.info
      secretName: mealie-tls
  rules:
    - host: mealie.heroaero.info
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9001
            path: /
            pathType: Prefix
